<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MovieDetailsActivity">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="1dp">

    </ProgressBar>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@color/blue_gray_500">

        <androidx.cardview.widget.CardView
            android:id="@+id/backButtonCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/hamburger_icon"
                android:src="@drawable/icon_back">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:contentPadding="3dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/icon_share">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/moviePosterCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/backButtonCardView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:contentDescription="@string/trending_movies_image"
                android:scaleType="fitCenter">

            </ImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/playCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/play_movie"
                    android:src="@drawable/icon_play">

                </ImageView>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/movieDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/backButtonCardView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/moviePosterCardView"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/movieNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="15sp">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genreRecycleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/ratingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/movieRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:progressTint="@color/white"
                    android:secondaryProgressTint="@android:color/transparent"
                    style="?android:attr/ratingBarStyleSmall">

                </RatingBar>

                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/white"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/reviewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bookTicketCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="355dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:contentPadding="8dp"
        tools:ignore="RelativeOverlap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/book_now"
            android:textColor="#2196F3"
            android:textSize="20sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/synopsisTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookTicketCardView"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/synopsis"
        android:textSize="17sp"
        android:visibility="gone">

    </TextView>

    <TextView
        android:id="@+id/synopsisTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/synopsisTitleTextView"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/synopsis"
        android:textSize="14sp"
        android:visibility="gone">

    </TextView>

</RelativeLayout>